# material-updater

./: Cargo.toml
.github/workflows/: Build.yml
src/: main.rs  mtbin.rs
