[package]
name = "material-updater"
version = "0.1.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive"] }
flate2 = { version = "1.1.0", features = ["zlib-rs"], default-features = false }
materialbin = { version = "0.1.1", path = "../materialbin" }
owo-colors = "4.1.0"

scroll = "0.12.0"
tempfile = "3.10.1"
zip = { version = "2.2.3", default-features = false, features = ["deflate", "deflate-flate2"] }


