[package]
name = "material-updater"
version = "0.1.12"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive"] }
flate2 = { version = "1.1.0", features = ["zlib-rs"], default-features = false }
# CHANGED: Now pulls from GitHub instead of a local path
materialbin = { version = "0.1.1", git = "https://github.com/mcbegamerxx954/materialbin" }
owo-colors = "4.1.0"
scroll = "0.13.0"
tempfile = "3.10.1"
zip = { version = "2.2.3", default-features = false, features = ["deflate", "deflate-flate2"] }
